# GmshSharp

./: .gitattributes  .gitignore  README.md
GmshSharp/: .editorconfig  GmshSharp.sln
GmshSharp/GmshSharp.Core/: Gmsh.cs  GmshModel.cs  GmshModelGeo.cs  GmshModelMesh.cs  GmshOnelab.cs  GmshOption.cs  GmshSharp.Core.csproj
GmshSharp/GmshSharp.Core/Algorithms/: MeshAlgorithms.cs
GmshSharp/GmshSharp.Core/Extensions/: MeshExtensions.cs
GmshSharp/GmshSharp.Core/Mesh/: HalfEdgeMesh.cs
GmshSharp/GmshSharp.Core/Topology/: TopologyAnalyzer.cs
GmshSharp/GmshSharp.Native/: Gmsh.cs  GmshSharp.Native.csproj  GmshWrapper.cs
GmshSharp/GmshSharp.Native/Native/: NativeMethods.cs
GmshSharp/GmshSharp.Tutorials/: GmshSharp.Tutorials.csproj  Program.cs  T1.cs  T2.cs  T3.cs  T4.cs  T5.cs
rust-bindings/: Cargo.toml
rust-bindings/src/: generated.rs
rust-bindings/tools/bindings/: generate_bindings.rs  generate_csharp_bindings.rs
